test/invalid/InvalidPlusPlus/InvalidPlusPlus.plume
/**
 * Invalid operator
 * @author 36994, César Santos
 */
class InvalidPlusPlus extends Object is
  field a
  method test : () -> Integer is
    a++